# ollama-MCP-server

./: .env.template  README.md  development_planning.md  mcp_config.json  pyproject.toml  run_server.sh  run_tests.sh
src/ollama_mcp_server/: __init__.py  __main__.py  config.py  issue_list.ini  models.py  ollama_client.py  prompts.py  repository.py  server.py
src/ollama_mcp_server/templates/: result_evaluation.txt  task_decomposition.txt
tests/: __init__.py  test_integration.py  test_mcp_server.py  test_models.py  test_ollama_client.py  test_utils.py
