[project]
name = "ollama-mcp-server"
version = "0.1.0"
description = "MCP that communicate with ollama"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.3.0",]
[[project.authors]]
name = "Kai Kogure"
email = "weizard@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
ollama-mcp-server = "ollama_mcp_server:main"
